# LARGE

./: .gitignore  README.md  environment.yml  model_download.py  pyproject.toml
large/: LARGE.py  LARGE_predict.py  batch_data_LARGE.py  gLM.py  glm_embed.py  plm_embed_esm1b_LARGE.py  readfasta.py  test_training.py  training.py
large/data/temp_data_LARGE/: embs_mean.pkl  embs_std.pkl  genefamily_code_to_name.csv  mechanism_code_to_name.csv  resistance_code_to_name.csv
